tests/error/case_postfix.gw
// [contains] unhandled expression type
int i[1];
switch(maybe) {
   case i[0]: break;
}
